ADD: get article and delete old def

--- a/BigContest2022.ipynb
+++ b/BigContest2022.ipynb
@@ -609,7 +609,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "316f74ed",
+   "id": "0ca745f0",
    "metadata": {},
    "source": [
     "## 내국인 입도자 수 분석"
@@ -618,7 +618,7 @@
   {
    "cell_type": "code",
    "execution_count": 388,
-   "id": "7b9848c4",
+   "id": "0bb77084",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -637,7 +637,7 @@
   {
    "cell_type": "code",
    "execution_count": 389,
-   "id": "8660546d",
+   "id": "1e208bf8",
    "metadata": {},
    "outputs": [
     {
@@ -853,7 +853,7 @@
   {
    "cell_type": "code",
    "execution_count": 390,
-   "id": "17ea1e94",
+   "id": "9def5fcb",
    "metadata": {
     "scrolled": true
    },
@@ -867,7 +867,7 @@
   {
    "cell_type": "code",
    "execution_count": 391,
-   "id": "6a81aaed",
+   "id": "3489f45c",
    "metadata": {},
    "outputs": [
     {
@@ -1070,7 +1070,7 @@
   {
    "cell_type": "code",
    "execution_count": 392,
-   "id": "bb10f6eb",
+   "id": "9fc35f97",
    "metadata": {},
    "outputs": [
     {
@@ -1098,7 +1098,7 @@
   {
    "cell_type": "code",
    "execution_count": 393,
-   "id": "507e1f8f",
+   "id": "5a70db90",
    "metadata": {},
    "outputs": [
     {
@@ -1147,7 +1147,7 @@
   {
    "cell_type": "code",
    "execution_count": 394,
-   "id": "eeb8ce2f",
+   "id": "a5821320",
    "metadata": {},
    "outputs": [
     {
@@ -1168,7 +1168,7 @@
   {
    "cell_type": "code",
    "execution_count": 395,
-   "id": "e2b3da26",
+   "id": "ecc97589",
    "metadata": {},
    "outputs": [
     {
@@ -1200,7 +1200,7 @@
   {
    "cell_type": "code",
    "execution_count": 396,
-   "id": "3c728ff4",
+   "id": "9b542990",
    "metadata": {},
    "outputs": [
     {
@@ -1236,7 +1236,7 @@
   {
    "cell_type": "code",
    "execution_count": 398,
-   "id": "a16f0874",
+   "id": "cb83b112",
    "metadata": {},
    "outputs": [
     {
@@ -1269,10 +1269,211 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "b07cc2f7",
+   "execution_count": 399,
+   "id": "24b40d2f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/md/9n6kyyln37d2ttfz5nklq8540000gn/T/ipykernel_4140/2266494078.py:5: FutureWarning: Dropping of nuisance columns in DataFrame reductions (with 'numeric_only=None') is deprecated; in a future version this will raise TypeError.  Select only valid columns before calling the reduction.\n",
+      "  df_domestic['total_visit_cnt'] = df_domestic.sum(axis=1)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>base_month</th>\n",
+       "      <th>leis_sports_cnt</th>\n",
+       "      <th>meet_work_cnt</th>\n",
+       "      <th>ref_view_cnt</th>\n",
+       "      <th>visit_rel_cnt</th>\n",
+       "      <th>edu_trip_cnt</th>\n",
+       "      <th>etc_cnt</th>\n",
+       "      <th>total_visit_cnt</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2015-01</td>\n",
+       "      <td>127063</td>\n",
+       "      <td>75791</td>\n",
+       "      <td>1313972</td>\n",
+       "      <td>55457</td>\n",
+       "      <td>3621</td>\n",
+       "      <td>9432</td>\n",
+       "      <td>1585336</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2015-02</td>\n",
+       "      <td>134718</td>\n",
+       "      <td>72552</td>\n",
+       "      <td>1180619</td>\n",
+       "      <td>43058</td>\n",
+       "      <td>202</td>\n",
+       "      <td>12025</td>\n",
+       "      <td>1443174</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2015-03</td>\n",
+       "      <td>143528</td>\n",
+       "      <td>78294</td>\n",
+       "      <td>1281718</td>\n",
+       "      <td>44581</td>\n",
+       "      <td>20466</td>\n",
+       "      <td>14841</td>\n",
+       "      <td>1583428</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2015-04</td>\n",
+       "      <td>146259</td>\n",
+       "      <td>83467</td>\n",
+       "      <td>1562412</td>\n",
+       "      <td>27927</td>\n",
+       "      <td>44893</td>\n",
+       "      <td>13662</td>\n",
+       "      <td>1878620</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2015-05</td>\n",
+       "      <td>179944</td>\n",
+       "      <td>87166</td>\n",
+       "      <td>1643818</td>\n",
+       "      <td>29779</td>\n",
+       "      <td>71746</td>\n",
+       "      <td>18225</td>\n",
+       "      <td>2030678</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>78</th>\n",
+       "      <td>2021-08</td>\n",
+       "      <td>43445</td>\n",
+       "      <td>51875</td>\n",
+       "      <td>1818485</td>\n",
+       "      <td>18128</td>\n",
+       "      <td>0</td>\n",
+       "      <td>7703</td>\n",
+       "      <td>1939636</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>79</th>\n",
+       "      <td>2021-09</td>\n",
+       "      <td>74382</td>\n",
+       "      <td>40312</td>\n",
+       "      <td>1424271</td>\n",
+       "      <td>173601</td>\n",
+       "      <td>0</td>\n",
+       "      <td>22176</td>\n",
+       "      <td>1734742</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>80</th>\n",
+       "      <td>2021-10</td>\n",
+       "      <td>159009</td>\n",
+       "      <td>203258</td>\n",
+       "      <td>1989117</td>\n",
+       "      <td>76544</td>\n",
+       "      <td>15</td>\n",
+       "      <td>8367</td>\n",
+       "      <td>2436310</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>81</th>\n",
+       "      <td>2021-11</td>\n",
+       "      <td>114236</td>\n",
+       "      <td>97990</td>\n",
+       "      <td>2084847</td>\n",
+       "      <td>66931</td>\n",
+       "      <td>703</td>\n",
+       "      <td>35387</td>\n",
+       "      <td>2400094</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>82</th>\n",
+       "      <td>2021-12</td>\n",
+       "      <td>183629</td>\n",
+       "      <td>110943</td>\n",
+       "      <td>1795360</td>\n",
+       "      <td>54437</td>\n",
+       "      <td>1077</td>\n",
+       "      <td>28358</td>\n",
+       "      <td>2173804</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>83 rows × 8 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   base_month  leis_sports_cnt  meet_work_cnt  ref_view_cnt  visit_rel_cnt  \\\n",
+       "0     2015-01           127063          75791       1313972          55457   \n",
+       "1     2015-02           134718          72552       1180619          43058   \n",
+       "2     2015-03           143528          78294       1281718          44581   \n",
+       "3     2015-04           146259          83467       1562412          27927   \n",
+       "4     2015-05           179944          87166       1643818          29779   \n",
+       "..        ...              ...            ...           ...            ...   \n",
+       "78    2021-08            43445          51875       1818485          18128   \n",
+       "79    2021-09            74382          40312       1424271         173601   \n",
+       "80    2021-10           159009         203258       1989117          76544   \n",
+       "81    2021-11           114236          97990       2084847          66931   \n",
+       "82    2021-12           183629         110943       1795360          54437   \n",
+       "\n",
+       "    edu_trip_cnt  etc_cnt  total_visit_cnt  \n",
+       "0           3621     9432          1585336  \n",
+       "1            202    12025          1443174  \n",
+       "2          20466    14841          1583428  \n",
+       "3          44893    13662          1878620  \n",
+       "4          71746    18225          2030678  \n",
+       "..           ...      ...              ...  \n",
+       "78             0     7703          1939636  \n",
+       "79             0    22176          1734742  \n",
+       "80            15     8367          2436310  \n",
+       "81           703    35387          2400094  \n",
+       "82          1077    28358          2173804  \n",
+       "\n",
+       "[83 rows x 8 columns]"
+      ]
+     },
+     "execution_count": 399,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "df_domestic = combine_data(2015, 2021)\n",
     "df_domestic = df_domestic.drop(columns='데이터기준일자')\n",
@@ -1281,22 +1482,6 @@
     "df_domestic['total_visit_cnt'] = df_domestic.sum(axis=1)\n",
     "df_domestic"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "c567f31c",
-   "metadata": {},
-   "source": [
-    "## 점염병이 입도객 수에 미치는 영향"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4860129f",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
