ADD: Complete to crawling naver news_data

--- a/Naver_news_crawling.ipynb
+++ b/Naver_news_crawling.ipynb
@@ -281,33 +281,105 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "2015.01.01_complete!\n",
-      "2015.02.01_complete!\n"
+      "2015.02.01_complete!\n",
+      "2015.03.01_complete!\n",
+      "2015.04.01_complete!\n",
+      "2015.05.01_complete!\n",
+      "(WARNING!) no results found\n",
+      "2015.06.01_complete!\n",
+      "2015.07.01_complete!\n",
+      "2015.08.01_complete!\n",
+      "2015.09.01_complete!\n",
+      "2015.10.01_complete!\n",
+      "2015.11.01_complete!\n",
+      "2015.12.01_complete!\n",
+      "2016.01.01_complete!\n",
+      "2016.02.01_complete!\n",
+      "2016.03.01_complete!\n",
+      "2016.04.01_complete!\n",
+      "2016.05.01_complete!\n",
+      "2016.06.01_complete!\n",
+      "2016.07.01_complete!\n",
+      "2016.08.01_complete!\n",
+      "2016.09.01_complete!\n",
+      "2016.10.01_complete!\n",
+      "2016.11.01_complete!\n",
+      "2016.12.01_complete!\n",
+      "2017.01.01_complete!\n",
+      "2017.02.01_complete!\n",
+      "2017.03.01_complete!\n",
+      "2017.04.01_complete!\n",
+      "2017.05.01_complete!\n",
+      "2017.06.01_complete!\n",
+      "2017.07.01_complete!\n",
+      "2017.08.01_complete!\n",
+      "2017.09.01_complete!\n",
+      "2017.10.01_complete!\n",
+      "2017.11.01_complete!\n",
+      "2017.12.01_complete!\n",
+      "2018.01.01_complete!\n",
+      "2018.02.01_complete!\n",
+      "2018.03.01_complete!\n",
+      "2018.04.01_complete!\n",
+      "2018.05.01_complete!\n",
+      "2018.06.01_complete!\n",
+      "2018.07.01_complete!\n",
+      "2018.08.01_complete!\n",
+      "2018.09.01_complete!\n",
+      "2018.10.01_complete!\n",
+      "2018.11.01_complete!\n",
+      "2018.12.01_complete!\n",
+      "2019.01.01_complete!\n",
+      "2019.02.01_complete!\n",
+      "2019.03.01_complete!\n",
+      "2019.04.01_complete!\n",
+      "2019.05.01_complete!\n",
+      "2019.06.01_complete!\n",
+      "(WARNING!) no results found\n",
+      "2019.07.01_complete!\n",
+      "2019.08.01_complete!\n",
+      "2019.09.01_complete!\n",
+      "2019.10.01_complete!\n",
+      "2019.11.01_complete!\n",
+      "2019.12.01_complete!\n",
+      "2020.01.01_complete!\n",
+      "(WARNING!) no results found\n",
+      "2020.02.01_complete!\n",
+      "2020.03.01_complete!\n",
+      "2020.04.01_complete!\n",
+      "2020.05.01_complete!\n",
+      "2020.06.01_complete!\n",
+      "2020.07.01_complete!\n",
+      "2020.08.01_complete!\n",
+      "2020.09.01_complete!\n",
+      "2020.10.01_complete!\n",
+      "2020.11.01_complete!\n",
+      "2020.12.01_complete!\n",
+      "2021.01.01_complete!\n",
+      "2021.02.01_complete!\n",
+      "2021.03.01_complete!\n",
+      "2021.04.01_complete!\n",
+      "2021.05.01_complete!\n",
+      "2021.06.01_complete!\n",
+      "2021.07.01_complete!\n",
+      "2021.08.01_complete!\n",
+      "2021.09.01_complete!\n",
+      "2021.10.01_complete!\n",
+      "2021.11.01_complete!\n",
+      "2021.12.01_complete!\n"
      ]
     }
    ],
    "source": [
     "saving_data(2015, 2021)"
    ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n",
-     "is_executing": true
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [],
    "metadata": {
     "collapsed": false,
     "pycharm": {
