ERROR: crawling data of def get max index

--- a/Naver_news_crawling.ipynb
+++ b/Naver_news_crawling.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "id": "971b8c16",
    "metadata": {
     "pycharm": {
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 22,
    "id": "f984fd9d",
    "metadata": {
     "pycharm": {
@@ -79,6 +79,7 @@
     "    while (current_index <= max_index) and (1 + current_index // 10 <= page_limit):\n",
     "        url = make_url(query, sort, field, begin, end, current_index)\n",
     "        bsobj = make_bsobj(url, delay, timeout, trial=10)\n",
+    "        print('making url', url)\n",
     "\n",
     "        if bsobj is None:\n",
     "            continue\n",
@@ -111,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 13,
    "id": "0db9def4",
    "metadata": {
     "pycharm": {
@@ -143,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 14,
    "id": "f98e7aa6",
    "metadata": {
     "pycharm": {
@@ -166,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 15,
    "id": "260ef478",
    "metadata": {
     "pycharm": {
@@ -195,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 52,
    "id": "4a70bc0a",
    "metadata": {
     "pycharm": {
@@ -205,22 +206,43 @@
    "outputs": [],
    "source": [
     "def get_max_index(bsobj):\n",
-    "    paging = bsobj.find(\"div\", {\"class\": \"sc_page_inner\"})\n",
+    "    paging = bsobj.find_all('a', 'btn_next')\n",
+    "    print(paging)\n",
     "    if not paging:\n",
     "        print('(WARNING!) no results found')\n",
     "        return None\n",
-    "\n",
-    "    atags = paging.find_all('a')\n",
-    "    if not atags:\n",
-    "        print('(WARNING!) there is only one page')\n",
-    "        return None\n",
-    "\n",
-    "    return max([int(atag[\"href\"].split('start=')[1]) for atag in atags])"
+    "    print(1)\n",
+    "    return True"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 56,
+   "id": "9bb80efe",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[<a aria-disabled=\"false\" class=\"btn_next\" href=\"?where=news&amp;sm=tab_pge&amp;query=%EC%A0%9C%EC%A3%BC%EB%8F%84%EA%B4%80%EA%B4%91&amp;sort=0&amp;photo=0&amp;field=1&amp;pd=3&amp;ds=2015.01.01&amp;de=2015.01.30&amp;cluster_rank=13&amp;mynews=0&amp;office_type=0&amp;office_section_code=0&amp;news_office_checked=&amp;nso=so:r,p:from20150101to20150130,a:t&amp;start=11\" onclick=\"return goOtherCR(this, 'a=nws.paging&amp;r=2&amp;u='+urlencode(urlexpand(this.href)));\" role=\"button\"><i class=\"spnew ico_page_arr\">다음</i></a>]\n",
+      "1\n"
+     ]
+    }
+   ],
+   "source": [
+    "url = 'https://search.naver.com/search.naver?&where=news&query=%EC%A0%9C%EC%A3%BC%EB%8F%84%EA%B4%80%EA%B4%91&sort=0&field=1&ds=2015.01.01&de=2015.01.30&nso=so:r,p:from20150101to20150130&start=1&refresh_start=21'\n",
+    "delay=0.5\n",
+    "timeout=30\n",
+    "bsobj = make_bsobj(url, delay, timeout, trial=10)\n",
+    "max_index = get_max_index(bsobj)\n",
+    "if max_index is None:\n",
+    "    print(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
    "id": "a0ba3b5c",
    "metadata": {
     "pycharm": {
@@ -242,7 +264,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 28,
+   "id": "062f913c",
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "def ran_num(n):\n",
@@ -252,17 +280,17 @@
     "        num = random.randint(1, n)\n",
     "        ls.append(num)\n",
     "    return num"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 29,
+   "id": "0c5e2f92",
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "def saving_data(start_year, end_year):\n",
@@ -271,121 +299,68 @@
     "            if j < 10:\n",
     "                j = '0' + str(j)\n",
     "            df = crawl('제주도관광', f'./news_data/{i}_{j}.xlsx', f'{i}.{j}.01', f'{i}.{j}.30')"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 30,
+   "id": "ff9e38dd",
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "making url https://search.naver.com/search.naver?&where=news&query=%EC%A0%9C%EC%A3%BC%EB%8F%84%EA%B4%80%EA%B4%91&sort=0&field=1&ds=2015.01.01&de=2015.01.30&nso=so:r,p:from20150101to20150130&start=1&refresh_start=0\n",
       "2015.01.01_complete!\n",
+      "making url https://search.naver.com/search.naver?&where=news&query=%EC%A0%9C%EC%A3%BC%EB%8F%84%EA%B4%80%EA%B4%91&sort=0&field=1&ds=2015.02.01&de=2015.02.30&nso=so:r,p:from20150201to20150230&start=1&refresh_start=0\n",
       "2015.02.01_complete!\n",
+      "making url https://search.naver.com/search.naver?&where=news&query=%EC%A0%9C%EC%A3%BC%EB%8F%84%EA%B4%80%EA%B4%91&sort=0&field=1&ds=2015.03.01&de=2015.03.30&nso=so:r,p:from20150301to20150330&start=1&refresh_start=0\n",
       "2015.03.01_complete!\n",
+      "making url https://search.naver.com/search.naver?&where=news&query=%EC%A0%9C%EC%A3%BC%EB%8F%84%EA%B4%80%EA%B4%91&sort=0&field=1&ds=2015.04.01&de=2015.04.30&nso=so:r,p:from20150401to20150430&start=1&refresh_start=0\n",
       "2015.04.01_complete!\n",
+      "making url https://search.naver.com/search.naver?&where=news&query=%EC%A0%9C%EC%A3%BC%EB%8F%84%EA%B4%80%EA%B4%91&sort=0&field=1&ds=2015.05.01&de=2015.05.30&nso=so:r,p:from20150501to20150530&start=1&refresh_start=0\n",
       "2015.05.01_complete!\n",
-      "(WARNING!) no results found\n",
+      "making url https://search.naver.com/search.naver?&where=news&query=%EC%A0%9C%EC%A3%BC%EB%8F%84%EA%B4%80%EA%B4%91&sort=0&field=1&ds=2015.06.01&de=2015.06.30&nso=so:r,p:from20150601to20150630&start=1&refresh_start=0\n",
       "2015.06.01_complete!\n",
+      "making url https://search.naver.com/search.naver?&where=news&query=%EC%A0%9C%EC%A3%BC%EB%8F%84%EA%B4%80%EA%B4%91&sort=0&field=1&ds=2015.07.01&de=2015.07.30&nso=so:r,p:from20150701to20150730&start=1&refresh_start=0\n",
       "2015.07.01_complete!\n",
+      "making url https://search.naver.com/search.naver?&where=news&query=%EC%A0%9C%EC%A3%BC%EB%8F%84%EA%B4%80%EA%B4%91&sort=0&field=1&ds=2015.08.01&de=2015.08.30&nso=so:r,p:from20150801to20150830&start=1&refresh_start=0\n",
       "2015.08.01_complete!\n",
-      "2015.09.01_complete!\n",
-      "2015.10.01_complete!\n",
-      "2015.11.01_complete!\n",
-      "2015.12.01_complete!\n",
-      "2016.01.01_complete!\n",
-      "2016.02.01_complete!\n",
-      "2016.03.01_complete!\n",
-      "2016.04.01_complete!\n",
-      "2016.05.01_complete!\n",
-      "2016.06.01_complete!\n",
-      "2016.07.01_complete!\n",
-      "2016.08.01_complete!\n",
-      "2016.09.01_complete!\n",
-      "2016.10.01_complete!\n",
-      "2016.11.01_complete!\n",
-      "2016.12.01_complete!\n",
-      "2017.01.01_complete!\n",
-      "2017.02.01_complete!\n",
-      "2017.03.01_complete!\n",
-      "2017.04.01_complete!\n",
-      "2017.05.01_complete!\n",
-      "2017.06.01_complete!\n",
-      "2017.07.01_complete!\n",
-      "2017.08.01_complete!\n",
-      "2017.09.01_complete!\n",
-      "2017.10.01_complete!\n",
-      "2017.11.01_complete!\n",
-      "2017.12.01_complete!\n",
-      "2018.01.01_complete!\n",
-      "2018.02.01_complete!\n",
-      "2018.03.01_complete!\n",
-      "2018.04.01_complete!\n",
-      "2018.05.01_complete!\n",
-      "2018.06.01_complete!\n",
-      "2018.07.01_complete!\n",
-      "2018.08.01_complete!\n",
-      "2018.09.01_complete!\n",
-      "2018.10.01_complete!\n",
-      "2018.11.01_complete!\n",
-      "2018.12.01_complete!\n",
-      "2019.01.01_complete!\n",
-      "2019.02.01_complete!\n",
-      "2019.03.01_complete!\n",
-      "2019.04.01_complete!\n",
-      "2019.05.01_complete!\n",
-      "2019.06.01_complete!\n",
-      "(WARNING!) no results found\n",
-      "2019.07.01_complete!\n",
-      "2019.08.01_complete!\n",
-      "2019.09.01_complete!\n",
-      "2019.10.01_complete!\n",
-      "2019.11.01_complete!\n",
-      "2019.12.01_complete!\n",
-      "2020.01.01_complete!\n",
-      "(WARNING!) no results found\n",
-      "2020.02.01_complete!\n",
-      "2020.03.01_complete!\n",
-      "2020.04.01_complete!\n",
-      "2020.05.01_complete!\n",
-      "2020.06.01_complete!\n",
-      "2020.07.01_complete!\n",
-      "2020.08.01_complete!\n",
-      "2020.09.01_complete!\n",
-      "2020.10.01_complete!\n",
-      "2020.11.01_complete!\n",
-      "2020.12.01_complete!\n",
-      "2021.01.01_complete!\n",
-      "2021.02.01_complete!\n",
-      "2021.03.01_complete!\n",
-      "2021.04.01_complete!\n",
-      "2021.05.01_complete!\n",
-      "2021.06.01_complete!\n",
-      "2021.07.01_complete!\n",
-      "2021.08.01_complete!\n",
-      "2021.09.01_complete!\n",
-      "2021.10.01_complete!\n",
-      "2021.11.01_complete!\n",
-      "2021.12.01_complete!\n"
+      "making url https://search.naver.com/search.naver?&where=news&query=%EC%A0%9C%EC%A3%BC%EB%8F%84%EA%B4%80%EA%B4%91&sort=0&field=1&ds=2015.09.01&de=2015.09.30&nso=so:r,p:from20150901to20150930&start=1&refresh_start=0\n",
+      "2015.09.01_complete!\n"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn [30], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m saving_data(\u001b[38;5;241m2015\u001b[39m, \u001b[38;5;241m2021\u001b[39m)\n",
+      "Cell \u001b[0;32mIn [29], line 6\u001b[0m, in \u001b[0;36msaving_data\u001b[0;34m(start_year, end_year)\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m j \u001b[38;5;241m<\u001b[39m \u001b[38;5;241m10\u001b[39m:\n\u001b[1;32m      5\u001b[0m     j \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m0\u001b[39m\u001b[38;5;124m'\u001b[39m \u001b[38;5;241m+\u001b[39m \u001b[38;5;28mstr\u001b[39m(j)\n\u001b[0;32m----> 6\u001b[0m df \u001b[38;5;241m=\u001b[39m \u001b[43mcrawl\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43m제주도관광\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43mf\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43m./news_data/\u001b[39;49m\u001b[38;5;132;43;01m{\u001b[39;49;00m\u001b[43mi\u001b[49m\u001b[38;5;132;43;01m}\u001b[39;49;00m\u001b[38;5;124;43m_\u001b[39;49m\u001b[38;5;132;43;01m{\u001b[39;49;00m\u001b[43mj\u001b[49m\u001b[38;5;132;43;01m}\u001b[39;49;00m\u001b[38;5;124;43m.xlsx\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43mf\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;132;43;01m{\u001b[39;49;00m\u001b[43mi\u001b[49m\u001b[38;5;132;43;01m}\u001b[39;49;00m\u001b[38;5;124;43m.\u001b[39;49m\u001b[38;5;132;43;01m{\u001b[39;49;00m\u001b[43mj\u001b[49m\u001b[38;5;132;43;01m}\u001b[39;49;00m\u001b[38;5;124;43m.01\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43mf\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;132;43;01m{\u001b[39;49;00m\u001b[43mi\u001b[49m\u001b[38;5;132;43;01m}\u001b[39;49;00m\u001b[38;5;124;43m.\u001b[39;49m\u001b[38;5;132;43;01m{\u001b[39;49;00m\u001b[43mj\u001b[49m\u001b[38;5;132;43;01m}\u001b[39;49;00m\u001b[38;5;124;43m.30\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m)\u001b[49m\n",
+      "Cell \u001b[0;32mIn [22], line 25\u001b[0m, in \u001b[0;36mcrawl\u001b[0;34m(query, save_as, begin, end, sort, field, delay, timeout, page_limit)\u001b[0m\n\u001b[1;32m     23\u001b[0m \u001b[38;5;28;01mwhile\u001b[39;00m (current_index \u001b[38;5;241m<\u001b[39m\u001b[38;5;241m=\u001b[39m max_index) \u001b[38;5;129;01mand\u001b[39;00m (\u001b[38;5;241m1\u001b[39m \u001b[38;5;241m+\u001b[39m current_index \u001b[38;5;241m/\u001b[39m\u001b[38;5;241m/\u001b[39m \u001b[38;5;241m10\u001b[39m \u001b[38;5;241m<\u001b[39m\u001b[38;5;241m=\u001b[39m page_limit):\n\u001b[1;32m     24\u001b[0m     url \u001b[38;5;241m=\u001b[39m make_url(query, sort, field, begin, end, current_index)\n\u001b[0;32m---> 25\u001b[0m     bsobj \u001b[38;5;241m=\u001b[39m \u001b[43mmake_bsobj\u001b[49m\u001b[43m(\u001b[49m\u001b[43murl\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mdelay\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mtimeout\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mtrial\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m10\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[1;32m     26\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mmaking url\u001b[39m\u001b[38;5;124m'\u001b[39m, url)\n\u001b[1;32m     28\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m bsobj \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n",
+      "Cell \u001b[0;32mIn [15], line 7\u001b[0m, in \u001b[0;36mmake_bsobj\u001b[0;34m(url, delay, timeout, trial)\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[38;5;28;01mwhile\u001b[39;00m count \u001b[38;5;241m<\u001b[39m trial:\n\u001b[1;32m      6\u001b[0m     \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[0;32m----> 7\u001b[0m         \u001b[43mtime\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43msleep\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdelay\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m+\u001b[39;49m\u001b[43m \u001b[49m\u001b[43mrandom\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mrandom\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m      8\u001b[0m         html \u001b[38;5;241m=\u001b[39m urlopen(Request(url\u001b[38;5;241m=\u001b[39murl, headers\u001b[38;5;241m=\u001b[39m{\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mUser-Agent\u001b[39m\u001b[38;5;124m'\u001b[39m: ua\u001b[38;5;241m.\u001b[39mrandom}), timeout\u001b[38;5;241m=\u001b[39mtimeout)\n\u001b[1;32m      9\u001b[0m         bsobj \u001b[38;5;241m=\u001b[39m BeautifulSoup(html, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mlxml\u001b[39m\u001b[38;5;124m'\u001b[39m)\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
      ]
     }
    ],
    "source": [
     "saving_data(2015, 2021)"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3700bf4f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
